force-app/main/default/objects/ServiceCrewMember/ServiceCrewMember.object-meta.xml
<CustomObject>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>