force-app/main/default/objects/ServiceCrewMember/fields/debugging__c.field-meta.xml
<CustomField>
    <fullName>debugging__c</fullName>
    <formula>$User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>debugging</label>
    <type>Text</type>
</CustomField>