force-app/main/default/objects/ServiceCrewMember/fields/Foreman_Crew_Leader__c.field-meta.xml
<CustomField>
    <fullName>Foreman_Crew_Leader__c</fullName>
    <formula>IF(AND(IsLeader, CONTAINS(Service_Resource_User_ID__c, $User.Id)), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Foreman/Crew Leader</label>
    <type>Checkbox</type>
</CustomField>