force-app/main/default/objects/ServiceCrewMember/fields/Service_Resource_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_Name__c</fullName>
    <description>Setting this via flow automation as we cannot formula through the Service Resource Lookup field.</description>
    <label>Service Resource Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>