force-app/main/default/objects/ServiceCrewMember/fields/Service_Resource_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Service_Resource_User_ID__c</fullName>
    <description>On user provisioning of our foremen, we will create the default Service Crew and Service Crew Member records for the foremen. We will set the foreman user ID on creation. This is needed because you cannot reference in a formula the ServiceResource lookup to get a handle to the user ID.</description>
    <label>Service Resource User ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>