force-app/main/default/objects/ServiceCrewMember/validationRules/ISBLANK_Service_Resource_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>ISBLANK_Service_Resource_Name</fullName>
    <active>true</active>
    <description>45762 After Save flow should be updating this value but to prevent any issues we are making required after initial creation</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
ISBLANK(  Service_Resource_Name__c  ))</errorConditionFormula>
    <errorMessage>Service Resource Name is required on the Service Crew Membership record</errorMessage>
</ValidationRule>