force-app/main/default/objects/ServiceCrewMember/listViews/All_ServiceCrewMembers.listView-meta.xml
<ListView>
    <fullName>All_ServiceCrewMembers</fullName>
    <columns>Name</columns>
    <columns>ServiceResource</columns>
    <columns>ServiceCrew</columns>
    <columns>StartDate</columns>
    <columns>EndDate</columns>
    <columns>IsLeader</columns>
    <columns>CreatedDate</columns>
    <columns>CreatedBy</columns>
    <filterScope>Everything</filterScope>
    <label>All Service Crew Members</label>
</ListView>